# spatial-codec-draco

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml  run.sh
bindings/: spatial_codec_draco.h
docs/: design.md  ffi.md
draco_wrapper_cpp/: CMakeLists.txt
draco_wrapper_cpp/include/: wrapper.h
draco_wrapper_cpp/src/: wrapper.cpp
examples/: combine_folders.rs  roundtrip.rs
src/: cpp.rs  error.rs  ffi.rs  lib.rs  types.rs
tests/: config.rs  roundtrip.rs
