[package]
name = "spatial_codec_draco"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "A small, robust wrapper around the upstream Draco point-cloud codec."
repository = "https://github.com/idlab-discover/spatial-codec-draco/"
readme = "README.md"
# Prevent multiple crates in the same dependency graph from trying to build/link Draco independently.
links = "spatial_codec_draco"
# Only include relevant files in the published crate
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "NOTICE",
  "build.rs",
  "cbindgen.toml",
  "bindings/**",
  "docs/**",
  "src/**",
  "tests/**",
  "examples/**",
  "draco_wrapper_cpp/**",

  # Minimal Draco subset needed to build from source
  "draco/CMakeLists.txt",
  "draco/LICENSE",
  "draco/AUTHORS",
  "draco/README.md",
  "draco/cmake/**",
  "draco/src/**",

  # In case upstream adds deps here (harmless if absent)
  "draco/third_party/**",
]

[lib]
# "staticlib" and "cdylib" are useful when linking from C/C++ or other languages.
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
# Expose a small, stable C ABI and (optionally) generate a C header via cbindgen.
ffi = ["dep:libc"]

# Keep the default experience ergonomic:
# - Rust API is always available.
# - C ABI can be enabled when needed.
default = []

[dependencies]
# Only needed for the C ABI surface (ffi feature).
libc = { version = "0.2", optional = true }

[build-dependencies]
cmake = "0.1"
# Used to generate `bindings/spatial_codec_draco.h` (pure Rust, no libclang needed).
cbindgen = "0.29"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.34"